2012-05-07  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/draw/box_plain.hh: Fix unused variable warning.

2011-11-30  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/accu/math/sumpow.hh: New accumulator.

2011-11-29  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix the initialization of all global constants (ticket #43)

	* mln/debug/slices_2d.hh,
	* mln/io/dump/get_header.hh,
	* mln/io/fld/header.hh,
	* mln/io/fld/load.hh,
	* mln/io/fld/load_header.hh,
	* mln/io/off/load.hh,
	* mln/io/off/save.hh,
	* mln/math/jacobi.hh,
	* mln/morpho/hit_or_miss.hh,
	* mln/world/binary_2d/subsample.hh: Add missing 'inline'.

	* tests/Makefile.am (CXXFLAGS): Add -DMLN_WO_GLOBAL_VARS.

	* tests/global_vars1.cc,
	* tests/global_vars2.cc: Make take MLN_WO_GLOBAL_VARS into
	consideration.

2011-11-28  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix invalid minimum value for builtin floating types. (ticket #247)

	* mln/value/builtin/floatings.hh: Here.

	* tests/value/builtin/floatings.cc: write test.

2011-11-24  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/fun/v2v/rgb_to_hsl.hh: Fix constructor declaration.

2011-11-25  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/io/dicom/load.hh: Update comments.

2011-11-24  Guillaume Lazzara  <z@lrde.epita.fr>

	Improve io::dump tests with floating values.

	* tests/io/dump/Makefile.am,
	* tests/io/dump/dump.cc: Here.

2011-11-23  Guillaume Lazzara  <z@lrde.epita.fr>

	New routine in Milena.

	* mln/data/compute_in_window.hh: New.

	* tests/data/Makefile.am: New target.

	* tests/data/compute_in_window.cc: New test.

2011-11-23  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix compilation with multiple files.

	* mln/canvas/browsing/backdiagonal2d.hh,
	* mln/canvas/browsing/breadth_first_search.hh,
	* mln/canvas/browsing/depth_first_search.hh,
	* mln/canvas/browsing/diagonal2d.hh,
	* mln/canvas/browsing/dir_struct_elt_incr_update.hh,
	* mln/canvas/browsing/directional.hh,
	* mln/canvas/browsing/fwd.hh,
	* mln/canvas/browsing/hyper_directional.hh,